// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders correct element 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,system-ui,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--theme-ui-colors-brand-primary,#337ab7);
  height: 32px;
  min-width: 32px;
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0,109,255,0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light,#e0e0e0);
  color: var(--theme-ui-colors-ui-gray-extraDark,#424242);
  cursor: default;
}

<a
  class="emotion-0"
  href="http://some.com/external"
>
  child
</a>
`;

exports[`NavButton renders correct element 1`] = `
.emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,system-ui,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--theme-ui-colors-brand-primary,#337ab7);
  height: 32px;
  min-width: 32px;
  color: white;
  fill: white;
}

.emotion-0:hover {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0,109,255,0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light,#e0e0e0);
  color: var(--theme-ui-colors-ui-gray-extraDark,#424242);
  cursor: default;
}

<a
  class="emotion-0"
  href="/testlib/somewhere"
>
  child
</a>
`;

exports[`variants filled (default) 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,system-ui,sans-serif;
  font-size: 0.875rem;
  font-weight: 300;
  line-height: 1.5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--theme-ui-colors-brand-primary,#337ab7);
  height: 32px;
  min-width: 32px;
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #2d6da3;
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0,109,255,0.4);
}

.emotion-0:active {
  background-color: #285f8f;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-ui-gray-light,#e0e0e0);
  color: var(--theme-ui-colors-ui-gray-extraDark,#424242);
  cursor: default;
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants ghost 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,system-ui,sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  height: 32px;
  min-width: 32px;
  color: var(--theme-ui-colors-brand-primary,#337ab7);
  fill: var(--theme-ui-colors-brand-primary,#337ab7);
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #c3daee;
  color: var(--theme-ui-colors-brand-primary,#337ab7);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2em rgba(0,109,255,0.4);
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants link 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  padding-left: 16px;
  padding-right: 16px;
  border: 0;
  border-radius: 2px;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,system-ui,sans-serif;
  font-size: 1rem;
  font-weight: 300;
  line-height: 1.5;
  color: var(--theme-ui-colors-brand-primary,#337ab7);
  padding: 0;
  fill: var(--theme-ui-colors-brand-primary,#337ab7);
}

.emotion-0:hover {
  color: var(--theme-ui-colors-brand-primary,#337ab7);
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;
